Updated Product/add api